M       CHANGES.txt
M       cat_plot_boxplot.m
A       cat_plot_circular.m
D       circularGraph.m
D       node.m

(1) Added: New circular plot cat_plot_circular.m.
(2) Deleted: circularGraph.m and node.m

------------------------------------------------------------------------
r833 | gaser | 2016-01-17 23:23:32 +0100 (So, 17 Jan 2016) | 14 lines

Changed paths:
M       CHANGES.txt
M       cat_conf_tools.m
M       cat_io_checkinopt.m
M       cat_plot_circular.m
M       cat_version.m
M       cat_vol_defs.m

(1) Fixed: Correct handling of filetypes and 4D-data in cat_vol_defs.m
(2) Fixed: If Contents.txt does not exist serach for Contens.m in cat_version.m
(3) Fixed: Correct handling of outputs in cat_conf_tools.m for applying
    deformations.
(4) Added some more features in cat_plot_circular.

------------------------------------------------------------------------
r834 | gaser | 2016-01-18 14:26:38 +0100 (Mo, 18 Jan 2016) | 11 lines

Changed paths:
M       CHANGES.txt
M       cat_plot_circular.m
M       cat_stat_TIV.m
M       cat_surf_render.m

(1) Fixed: Issue with missing "ned" in cat_surf_render.m.
(2) Fixed: Wrong order of tissues in cat_stat_TIV.m (thanks to Nikolaos
    Koutsouleris for pointing to that issues)
(3) Changed: Added some more functionality to cat_plot_circular.m

------------------------------------------------------------------------
r835 | gaser | 2016-01-18 22:52:48 +0100 (Mo, 18 Jan 2016) | 9 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
MM      cat_plot_circular.m
A       cat_stat_cva_ui.m
M       html/cat.html

New: Function for CVA.

------------------------------------------------------------------------

Changed paths:
M       CHANGES.txt
M       cat_plot_boxplot.m
M       cat_stat_check_cov.m
M       cat_stat_cva_ui.m

Fixed: Violine plot in cat_plot_boxplot will be only used if Statistics
Toolbox is found.
------------------------------------------------------------------------
r836 | gaser | 2016-01-20 20:48:09