@@ -94,7 +94,7 @@
         </tr>
         <tr>
           <td>p</td>
-          <td>segmented</td>
+          <td>partial volume segmentation</td>
         </tr>
         <tr>
           <td>0</td>
